environments/apps/ghostfolio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ghostfolio
  labels:
    app.kubernetes.io/name: ghostfolio
