environments/apps/ghostfolio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghostfolio
  namespace: ghostfolio
  labels:
    app.kubernetes.io/name: ghostfolio
    app.kubernetes.io/component: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ghostfolio
      app.kubernetes.io/component: application
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ghostfolio
        app.kubernetes.io/component: application
    spec:
      containers:
        - name: ghostfolio
          image: docker.io/ghostfolio/ghostfolio:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3333
          resources:
            requests:
              cpu: 250m
              memory: 300Mi
            limits:
              cpu: 1000m
              memory: 800Mi
