environments/apps/ghostfolio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghostfolio
  namespace: ghostfolio
  labels:
    app.kubernetes.io/name: ghostfolio
    app.kubernetes.io/component: application
spec:
  selector:
    app.kubernetes.io/name: ghostfolio
    app.kubernetes.io/component: application
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
